kubernete-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mcroapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microapp
spec:
  hosts:
  - "*"
  gateways:
  - microapp-gateway
  http:
  - match:
    - uri:
        exact: /home
    route:
    - destination:
        host: home
        port:
          number: 9080
